# deep-analyst

./: .gitignore  DESIGN.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  builders.py
backend/app/api/: runs.py  ws.py
backend/app/artifacts/: __init__.py  store.py
backend/app/events/: __init__.py  bus.py  decoder.py  types.py
backend/app/runtime/: __init__.py  agent_runtime.py  ask_user.py  orchestrator.py
backend/app/tools/: __init__.py  ask_user.py  web_search.py
backend/tests/: test_decoder.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  reducer.test.ts  reducer.ts  store.ts  theme.ts  types.ts  useEventStream.ts
frontend/src/components/: ArtifactsPanel.tsx  AskUserPrompt.tsx  ChatInput.tsx  EventList.tsx  Header.tsx  Landing.tsx  Logo.tsx  NodeDetail.tsx  PipelineRow.tsx  StatusBar.tsx  TraceTree.tsx
